[Upgraded v2.2 fixed random elements selection and remove double rounding]